<resources>
    <string name="app_name">Screen Recorder</string>
    <string name="action_settings">设置</string>

    <!-- Strings used for fragments for navigation -->
    <string name="api_manager_fragment_label">上传接口</string>
    <string name="api_form_fragment_label">编辑上传接口</string>
    <string name="video_manager_fragment_label">录屏记录</string>
    <string name="broadcast_receiver_action_media_record_service" translatable="false">io.github.nic562.screen.recorder.MediaRecordService</string>
    <string name="broadcast_receiver_action_upload_service" translatable="false">io.github.nic562.screen.recorder.UploadService</string>
    <string name="broadcast_receiver_action_upload_manager" translatable="false">io.github.nic562.screen.recorder.VideoManager</string>
    <string name="broadcast_receiver_action_record_accessibility_service" translatable="false">io.github.nic562.screen.recorder.RecordAccessibilityService</string>
    <string name="broadcast_receiver_action_net_traffic_statistics" translatable="false">io.github.nic562.screen.recorder.NetTrafficStatisticsService</string>
    <string name="broadcast_receiver_action_net_traffic_statistics_receive" translatable="false">io.github.nic562.screen.recorder.NetTrafficStatisticsServiceReceive</string>
    <string name="broadcast_receiver_action_remote_calling_sv" translatable="false">io.github.nic562.screen.recorder.RemoteCallingSV</string>
    <string name="broadcast_receiver_action_remote_calling_ui" translatable="false">io.github.nic562.screen.recorder.RemoteCallingUI</string>

    <string name="confirm2enable_notification">建议开启通知允许，可同步项目工作状态以及相关状态控制</string>
    <string name="recording_notification">录屏状态</string>
    <string name="recording_notification_description">录屏状态的显示以及相关状态控制</string>
    <string name="uploading_notification">上传状态</string>
    <string name="uploading_notification_description">上传状态的显示以及相关状态控制</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="recording_num">录屏中(%ds)&#8230;点击通知停止录屏</string>
    <string name="record_finished_need_to_upload">录屏已经完成，请点击这里进行上传</string>
    <string name="add">新增</string>
    <string name="submit">保存</string>
    <string name="delete">删除</string>
    <string name="api_title">接口名</string>
    <string name="api_method">请求方式</string>
    <string name="api_url">请求地址</string>
    <string name="api_header">请求头</string>
    <string name="api_body">请求体</string>
    <string name="api_file_arg_name">上传文件参数名</string>
    <string name="help_key_value">以[Key=Value]的形式，一行为一组。当前可用的占位参数：$create_time:创建时间</string>
    <string name="input_require">这项为必填</string>
    <string name="record_start">开始录屏</string>
    <string name="record_stop">停止录屏</string>
    <string name="confirm2delete_video">是否确认要删除该记录？</string>
    <string name="no_api">当前未定义任何接口</string>
    <string name="select_an_upload_api">请选择一个上传接口</string>
    <string name="uploading_video">录屏上传中</string>
    <string name="uploading_wait">正在上传中，请稍后&#8230;</string>
    <string name="auto_upload">自动上传</string>
    <string name="auto_upload_description">完成录屏后，根据默认接口自动上传录屏视频</string>
    <string name="auto_delete">视频自动删除</string>
    <string name="auto_delete_description">完成上传后自动删除录屏视频记录</string>
    <string name="log">日志</string>
    <string name="upload_args_encoding">是否编码请求参数</string>
    <string name="upload_args_encoding_description">用URLEncode的方式编码请求体中的参数值</string>
    <string name="upload_finish">完成上传</string>
    <string name="upload_wait">等待上传</string>
    <string name="upload_cancel">上传取消了</string>
    <string name="auto_stop_record">自动停止录屏</string>
    <string name="count_down_seconds">倒计时秒数</string>
    <string name="accessibility_helper">录屏辅助</string>
    <string name="accessibility_service_description">用于辅助录屏操作，可能会被系统自行关闭，需要时请再次手动开启。</string>
    <string name="auto">自动化</string>
    <string name="auto_2back">自动切换到后台</string>
    <string name="auto_2back_description">开启录屏后自动切换到后台</string>
    <string name="failed_to_create_widgets">辅助组件启动失败，请重新授权启动</string>
    <string name="net_traffic_statistics">网络统计</string>
    <string name="net_traffic_start">开启网络流量统计</string>
    <string name="net_traffic_statistics_description">可统计指定应用的网络请求流量，包括上传、下载</string>
    <string name="is_idle">空闲中</string>
    <string name="upload_speed">上传速率: %.2fKB/s</string>
    <string name="download_speed">下载速率: %.2fKB/s</string>
    <string name="service_preparing">服务准备中…</string>
    <string name="choose_apps">当前监听所有应用，如需指定应用，请点击下方列表项。变更后请先停止监听再重新开启。</string>
    <string name="stop">停止</string>
    <string name="confirm2remove_all">是否确认要清理所有已选项?</string>
    <string name="search">搜索</string>
    <string name="not_start">未开启</string>
    <string name="please_stop_first">请先停止监听</string>
    <string name="log_permission">授权日志文件</string>
    <string name="read_log">读取日志</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="file_is_empty">文件为空</string>

</resources>