<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_manager_fragment_label"
            app:icon="@drawable/ic_baseline_arrow_circle_up_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_manager_fragment_label"
            app:icon="@drawable/ic_baseline_play_circle_outline_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_record_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_start"
            app:icon="@drawable/ic_baseline_radio_button_checked_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_record_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_stop"
            app:icon="@drawable/ic_baseline_stop_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility_helper"
            app:icon="@drawable/ic_baseline_accessibility_new_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>